styles.css
@font-face {
    font-family: "Poppins";
    src: url(Fonts/Poppins.ttf);
}

/* ---------------------------------------------------------------------------- */
/*                      Нужные стили для адаптива */
/* ---------------------------------------------------------------------------- */
.wrapper {
    display: flex;
    min-height: 100%;
    overflow: hidden;
    flex-direction: column;
}
.container {
    max-width: 1440px;
    width: 100%;

    margin: 0px auto;
}

/* ---------------------------------------------------------------------------- */
/*                                  header */
/* ---------------------------------------------------------------------------- */
.header-frame {
    max-width: 1440px;
    height: 90px;
    flex-shrink: 0;
    display: flex;
    justify-content: center;

    background: #fff;
    box-shadow: 11px 11px 25px 0px rgba(9, 7, 37, 0.06);
}
.header-content {
    display: inline-flex;
    padding: 20px 20px 20px 32px;
    justify-content: flex-end;
    align-items: center;
    gap: 343.188px;
}
.header-content-nav {
    display: flex;
    height: 50px;
    padding: 2px 0px 2px 15.813px;
    justify-content: flex-end;
    align-items: center;
    gap: 32px;

    color: #1b1a1a;
    font-family: Poppins;
    font-size: 15px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
}
.header-content-nav-projects {
    width: 61px;
}
.header-content-nav-about {
    width: 46px;
}
.header-content-nav-news {
    width: 40px;
}
.header-content-nav-team {
    width: 44px;
}
.header-content-nav-contant {
    width: 64px;
}
.header-content-nav-rectangle {
    width: 155px;
    height: 46px;
    flex-shrink: 0;
    border-radius: 14px;
    background: #1b1a1a;

    display: flex;
    justify-content: center;
    align-items: center;
}
.header-content-nav-rectangle-text {
    width: 115px;

    color: #fff;
    font-family: Poppins;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0.4px;
}

/* ---------------------------------------------------------------------------- */
/*                                  main */
/* ---------------------------------------------------------------------------- */
.main-frame {
    max-width: 1440px;
    height: 720px;
    flex-shrink: 0;

    background-color: #ece7e4;
    display: flex;
    gap: 19px;
}
.main-content {
    width: 600px;
    height: 566px;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;

    margin-top: 77px;
    margin-left: 60px;

    padding-top: 60px;
    padding-left: 40px;
}
.main-content-company {
    color: #645c55;
    font-family: Poppins;
    font-size: 14px;
    font-style: normal;
    font-weight: 400;
    line-height: 20px;
    letter-spacing: 2px;
    text-transform: uppercase;

    width: 190px;
}
.main-content-header {
    color: #1b1a1a;
    font-family: Poppins;
    font-size: 64px;
    font-style: normal;
    font-weight: 400;
    line-height: 70.4px;

    width: 417px;
    position: relative;
    top: 20px;
}
.main-content-span {
    width: 509px;
    color: #403e3b;
    font-family: Poppins;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;

    position: relative;
    top: 39px;
}
.main-content-button {
    padding: 0;
    border: none;
    font: inherit;
    background-color: transparent;
    cursor: pointer;

    width: 133px;
    height: 46px;
    flex-shrink: 0;

    display: flex;
    justify-content: center;
    align-items: center;

    position: relative;
    left: 4px;
    top: 69px;
}
.main-content-button-text {
    width: 93px;
    color: #1b1a1a;
    font-family: Poppins;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0.4px;
}

#main-picture {
    background: url(Pictures/Main/IMAGE.svg);
    width: 100%;
    height: auto;
}
/* ---------------------------------------------------------------------------- */
/*                                  Медиа запросы */
/* ---------------------------------------------------------------------------- */
@media (max-width: 1320px) {
    .container {
        max-width: 1100px;
    }
    /* ---------------------------------------------------------------------------- */
    /*                                  header */
    /* ---------------------------------------------------------------------------- */
    .header-content {
        gap: 10px;
    }
}
@media (max-width: 992px) {
    .container {
        max-width: 750px;
    }
    /* ---------------------------------------------------------------------------- */
    /*                                  header */
    /* ---------------------------------------------------------------------------- */
    .header-content {
        flex-direction: column;
        gap: 0px;
    }

    /* ---------------------------------------------------------------------------- */
    /*                                  main */
    /* ---------------------------------------------------------------------------- */
    #main-picture {
        display: none;
    }
}
@media (max-width: 767px) {
    .container {
        max-width: 420px;
    }
    /* ---------------------------------------------------------------------------- */
    /*                                  header */
    /* ---------------------------------------------------------------------------- */
    .header-frame {
        height: 270px;
    }
    .header-content {
        flex-direction: column;
        justify-content: space-between;
        gap: 0px;
        padding: 0;
        padding-bottom: 10px;
    }
    .header-content-nav {
        flex-direction: column;
        padding: 0;
        gap: 10px;
    }

    /* ---------------------------------------------------------------------------- */
    /*                                  main */
    /* ---------------------------------------------------------------------------- */
    .main-frame {
        height: 660px;
    }
    .main-content {
        margin-left: 0px;
        margin-top: 0px;
        padding-top: 40px;
    }
    .main-content-header {
        width: 40%;
        font-size: 50px;
    }
    .main-content-span {
        width: 60%;
    }
}

@media (max-width: 419px) {
    .container {
        max-width: 320px;
    }
    /* ---------------------------------------------------------------------------- */
    /*                                  main */
    /* ---------------------------------------------------------------------------- */
    .main-frame {
        padding: 0;
        margin: 0;
        height: 590px;
    }
    .main-content {
        max-width: 320px;
        height: 1500px;
        padding: 0;
        padding-top: 10px;
        margin: 0;
        display: flex;
        align-items: center;
    }
    .main-content-company {
        text-align: center;
    }
    .main-content-header {
        width: 100%;
        font-size: 35px;
        text-align: center;
    }
    .main-content-span {
        width: 90%;
    }
}
@media (max-width: 320px) {
    .container {
        max-width: none;
    }
}

